--- a/src/components/Menu/menu.module.css
+++ b/src/components/Menu/menu.module.css
@@ -8,10 +8,7 @@
     top: 32px;
     left: -320px;
     transition: .2s;
-}
-
-.container * {
-    z-index: 1;
+    z-index: 999;
 }
 
 .open {
@@ -29,6 +26,11 @@
     left: 100%;
     top: 0;
     border-radius: 0 8px 8px 0;
+    box-shadow: #0000000f 0 0 24px;
+}
+
+.open>button {
+    box-shadow: none;
 }
 
 .button>img {
