--- a/src/layouts/Index/index.module.css
+++ b/src/layouts/Index/index.module.css
@@ -1,32 +1,38 @@
 .container {
     width: 100vw;
     height: 100vh;
-    background-color: #eeeeee;
-    background-repeat: no-repeat;
-    background-size: cover;
     z-index: 1;
 }
 
-.today {
+.content {
     width: 1168px;
+    height: 100%;
+    margin: 0 auto;
+    z-index: 9;
+}
+
+.today {
+    width: 100%;
     height: 80px;
+    font-size: 24px;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin: 0 auto;
+}
+
+.days {
+    width: 100%;
+    font-size: 20px;
+    display: flex;
+    justify-content: space-around;
 }
 
 .callender {
-    width: 1168px;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     row-gap: 8px;
     column-gap: 8px;
-    margin: 0 auto;
-    /* position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); */
 }
 
 .backgroundSun {
@@ -34,9 +40,8 @@
     height: 30vw;
     border-radius: 999px;
     background: linear-gradient(#ff0000, #ff8800);
-    position: fixed;
+    position: absolute;
     top: 50%;
     transform: translate(-50%, -50%);
     left: 50%;
-    z-index: 0;
 }
