--- a/src/components/DateBlock/dateblock.module.css
+++ b/src/components/DateBlock/dateblock.module.css
@@ -4,36 +4,40 @@
     box-sizing: border-box;
     padding: 16px;
     backdrop-filter: blur(8px);
-    background-color: #ffffffa0;
+    background-color: rgba(var(--main-rgb), 0.5);
     border-radius: 16px;
     transition: .2s;
 }
 
+
 .container:hover {
-    background-color: #ffffffce;
     border-radius: 8px;
     box-shadow: var(--accent) 0 0 16px;
     backdrop-filter: blur(12px);
 }
 
 .container.disable {
-    background-color: #eeeeeea0;
+    background-color: rgba(var(--main-rgb), 0.1);
     box-shadow: none;
+}
+
+.container.disable:hover {
+    backdrop-filter: blur(8px);
 }
 
 .date {
     font-size: 32px;
     line-height: 32px;
-    color: var(--dark-main);
+    color: var(--negative-main);
     margin-top: -8px;
     margin-bottom: 0px;
     -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: var(--dark-main);
+    -webkit-text-stroke-color: var(--negative-main);
 }
 
 p.disable {
-    color: var(--light-disabled-text);
-    -webkit-text-stroke-color: var(--light-disabled-text);
+    color: var(--disabled-text);
+    -webkit-text-stroke-color: var(--disabled-text);
 }
 
 .todos {
@@ -45,11 +49,11 @@ p.disable {
 .todos::-webkit-scrollbar {
     width: 6px;
     border-radius: 999px;
-    background-color: var(--light-background);
+    background-color: var(--background);
 }
 
 .todos::-webkit-scrollbar-thumb {
-    background-color: var(--light-disabled-text);
+    background-color: var(--disabled-text);
     border-radius: 999px;
 }
 
