--- a/src/components/Menu/menu.module.css
+++ b/src/components/Menu/menu.module.css
@@ -1,18 +1,18 @@
 .container {
     width: 320px;
-    /* height: 332px; */
-    background-color: var(--light-main);
+    background-color: var(--main);
     border-bottom-right-radius: 16px;
     padding: 32px 32px 32px 0;
     position: absolute;
     top: 32px;
-    left: -320px;
+    left: 0px;
+    transform: translateX(-100%);
     transition: .2s;
     z-index: 999;
 }
 
 .open {
-    left: 0;
+    transform: translateX(0);
 }
 
 .button {
@@ -21,7 +21,7 @@
     border: none;
     outline: none;
     padding: 16px;
-    background-color: var(--light-main);
+    background-color: var(--main);
     position: absolute;
     left: 100%;
     top: 0;
@@ -47,6 +47,7 @@
     justify-content: start;
     align-items: center;
     padding: 0 8px;
+    color: var(--negative-main);
 }
 
 .icon {
@@ -54,7 +55,7 @@
     height: 64px;
     border-radius: 9999px;
     overflow: hidden;
-    background-color: var(--light-main);
+    background-color: var(--main);
     margin-right: 8px;
 }
 
@@ -63,15 +64,17 @@
 }
 
 .username {
-    color: var(--light-main);
+    color: var(--main);
     font-family: orbitron, sans-serif;
     font-weight: 300;
     font-size: 28px;
+    color: var(--negative-main);
 }
 
 .menus {
     width: 320px;
     padding-left: 8px;
+    color: var(--negative-main);
 }
 
 .menus>li {
