--- a/src/components/Todo/todo.module.css
+++ b/src/components/Todo/todo.module.css
@@ -2,6 +2,6 @@
     width: 100%;
     height: 48px;
     padding: 8px;
-    background-color: var(--light-main);
+    background-color: var(--main);
     border-radius: 8px;
 }
